fixed blue button color on iOS

--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ form {
 .btn, #search {
     font-size: 36px;
     color: black;
+    background-color: #FFFFFF;
 }
 
 #main {
